--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </nav>
     <div class="whatsapp">
         <a href="https://api.whatsapp.com/send?phone=+54xxx" target="_blank">
-        <img src="./Img/whatsapp.png" alt="logo-whatsapp" class="animate__animated animate__backInDown">
+        <img src="./img/whatsapp.png" alt="logo-whatsapp" class="animate__animated animate__backInDown">
         </a>
     </div>  
     <section class="banner" id="inicio">  
